Fixed horizontal scrollbar

--- a/app/scss/base/_base.scss
+++ b/app/scss/base/_base.scss
@@ -7,8 +7,9 @@
 }
 
 body {
-  font-size: 16px;
+  color: $color-black;
   font-family: $primary-font;
+  font-size: 16px;
   font-weight: 400;
 }
 
